--- a/b2d-venture/app/globals.css
+++ b/b2d-venture/app/globals.css
@@ -14,7 +14,7 @@
     --popover-foreground: 222.2 84% 4.9%;
 
     --primary: 222.2 47.4% 11.2%;
-    --primary-foreground: 7, 100%, 62%;
+    --primary-foreground: 7, 100%, 62%; /* Dark orange*/
 
     --secondary: 210 40% 96.1%;
     --secondary-foreground: 222.2 47.4% 11.2%;
@@ -134,6 +134,10 @@ body {
     @apply font-bold text-[28px] leading-[36px];
   }
 
+  .h5-regular {
+    @apply font-normal text-[28px] leading-[36px];
+  }
+
   /* 24 */
   .p-bold-24 {
     @apply font-bold text-[24px] leading-[36px];
@@ -220,7 +224,16 @@ body {
   .p-medium-12 {
     @apply text-[12px] font-medium leading-[20px];
   }
-  
+
+  /* Custom class typography */
+  .h1-welcome-back {
+    @apply font-bold text-[50px] leading-[52px];
+    color: #FF553E;
+    text-align: center;
+    letter-spacing: -0.4px;
+  }
+
+
 
   /* SHADCN OVERRIDES */
   .select-field {
