--- a/b2d-venture/app/globals.css
+++ b/b2d-venture/app/globals.css
@@ -305,3 +305,13 @@ body {
 .react-datepicker__time-list-item--selected {
   background-color: #624cf5 !important;
 }
+
+/* For SignUp page */
+/* For SignUp page */
+.signUp-bg {
+  background: linear-gradient(0deg, rgba(255,255,255,1) 85%, rgba(255,208,167,1) 100%);
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
