--- a/b2d-venture/app/globals.css
+++ b/b2d-venture/app/globals.css
@@ -33,6 +33,12 @@
     --ring: 222.2 84% 4.9%;
 
     --radius: 0.5rem;
+
+    --chart-1: 25, 100%, 51%;
+    --chart-2: 11, 100%, 45%;
+    --chart-3: 26, 100%, 74%;
+    --chart-4: 47, 100%, 74%;
+    --chart-5: 31, 100%, 74%;
   }
 
   .dark {
