--- a/b2d-venture/app/globals.css
+++ b/b2d-venture/app/globals.css
@@ -70,6 +70,13 @@
 
 body {
   font-family: var(--font-poppins);
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+
+footer{
+  margin-top: auto;
 }
 
 .filter-gray {
