add pie chart data

--- a/b2d-venture/app/globals.css
+++ b/b2d-venture/app/globals.css
@@ -27,13 +27,11 @@
     --input: 20 5.9% 90%;
     --ring: 24.6 95% 53.1%;
     --radius: 0.5rem;
-    --chart-1: 359, 94%, 62%;
-    --chart-2: 21, 89%, 56%;
-    --chart-3: 33, 94%, 55%;
-    --chart-4: 42, 93%, 64%;
-    --chart-5: 94, 38%, 59%;
-    --chart-6: 162, 43%, 46%;
-    --chart-7: 208, 25%, 45%;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
   }
 
   .dark {
