--- a/b2d-venture/app/globals.css
+++ b/b2d-venture/app/globals.css
@@ -311,7 +311,7 @@ footer{
 .signUp-bg {
   background: linear-gradient(0deg, rgba(255,255,255,1) 85%, rgba(255,208,167,1) 100%);
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   display: flex;
   flex-direction: column;
 }
